--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Zsolt Turi <turi.zsolt.m@gmail.com>",
   "name": "react-mention-textarea",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A simple tool to create a textarea with mentioning possibility.",
   "dependencies": {
     "react": "^16.5.0",
@@ -11,10 +11,8 @@
   },
   "license": "MIT",
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "build": "rm -rf ./lib && tsc",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
