--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "author": "Zsolt Turi <turi.zsolt.m@gmail.com>",
   "name": "react-mention-textarea",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "A simple tool to create a textarea with mentioning possibility.",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "dependencies": {
     "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-scripts-ts": "2.17.0",
-    "textarea-caret": "^3.1.0"
+    "textarea-caret": "^3.1.0",
+    "typestyle": "^2.0.1"
   },
   "license": "MIT",
   "scripts": {
